--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,8 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# own gitignore rules
+
+# ingore docker-compose files donwloaded
+docker-compose.yml*
