--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@
 version: '3.9'
 services:
   db:
-    image: postgres:13
+    image: postgres
     restart: unless-stopped
     hostname: db
     environment:
