--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Stop Chemotion container
-        run: docker compose down
+      - name: Stop Chemotion containers
+        run: docker compose stop
 
       - name: Force pulling of the images
         run: docker compose pull
